# ControllerCloset

./: .gitignore  .mxproject  CMakeLists.txt
cmake/: STM32G0_PARA.cmake
drivers/CMSIS/Device/ST/STM32G0xx/Include/: stm32g0xx.h
drivers/HAL/GPIO/: gpio.cpp  gpio_af.h  gpio_base.h  gpio_input.h  gpio_output.h
drivers/HAL/USART/: usart.cpp  usart.h
lib/HAL/GPIO/: gpio_af.h  gpio_base.h  gpio_input.h  gpio_output.h
src/: main.c  main.h
src/soil_sensor/: communication.cpp
